--- a/style.css
+++ b/style.css
@@ -41,20 +41,20 @@ header {
 }
 main {
   display: flex;
-  height: 70vh;
+  height: 100%;
   width: 100%;
-  gap: 30px;
+  gap: 40px;
   margin-bottom: 20px;
 }
 main div {
   background: url("images/illustration-mockups.svg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  width: 50%;
-  height: 100%;
+  width: 55%;
+  height: 120%;
 }
 main section {
-  width: 50%;
+  width: 45%;
   display: flex;
   flex-direction: column;
   gap: 24px;
