--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   width: 100%;
   height: 100%;
   background: url("images/bg-desktop.svg");
-  background-size: 75%;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position-y: center;
   display: flex;
@@ -48,7 +48,7 @@ main {
 }
 main div {
   background: url("images/illustration-mockups.svg");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   width: 55%;
   height: 120%;
@@ -105,4 +105,63 @@ footer {
 .fa-brands:focus {
   color: #ff52c1;
   border: 1px solid #ff52c1;
+}
+
+@media screen and (max-width: 1200px) {
+  h1 {
+    font-size: 2rem;
+    line-height: 40px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .container {
+    background: url("./images/bg-mobile.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  main {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    gap: 0;
+  }
+  main div {
+    width: 100%;
+    height: 400px;
+    background-size: contain;
+    background-position-x: center;
+  }
+  main section {
+    width: 100%;
+    align-items: center;
+  }
+  footer {
+    margin-top: 100px;
+    padding-bottom: 100px;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  header img {
+    width: 100px;
+  }
+  main div {
+    height: 300px;
+  }
+}
+@media screen and (max-width: 410px) {
+  main div {
+    height: 200px;
+  }
 }
